# centrix

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  centroiding_spec.md
.cargo/: config.toml
.claude/: settings.local.json
benches/: centroid_benchmark.rs  lasso_benchmark.rs
docs/: algorithm.md  io-format.md  parameters.md  usage.md
scripts/: centrix_lasso_walkthrough.ipynb  centrix_spectrum_comparison.ipynb  glufib_mz_accuracy.ipynb  mzml_rewrite.py  mzml_validate.py  mzml_verify_repair.py
scripts/mzml_validator_data/: cv_descendants.json
src/: basis.rs  calibration.rs  centroid.rs  config.rs  cwt.rs  error.rs  lasso.rs  lib.rs  main.rs  noise.rs  signal.rs
src/io/: mod.rs  reader.rs  writer.rs
tests/: roundtrip.rs
